--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,8 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: poppins, sans-serif;
+  width: 100%;
+  height: 100%;
 }
 
 .w-5 {
